Fix layout issues in Webkit browsers

--- a/css/content.css
+++ b/css/content.css
@@ -1,6 +1,5 @@
 .content {
   border-bottom: 1px solid var(--color-light-grey);
-  margin-bottom: var(--space-md);
   padding-bottom: var(--space-md);
 }
 
